# thewiki

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  thewiki.example.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docker.yml  helm-release.yml  helm.yml  openapi.yml  release.yml
charts/thewiki/: .helmignore  Chart.yaml  README.md  values.yaml
charts/thewiki/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret-database.yaml  secret-storage.yaml  service.yaml  serviceaccount.yaml
crates/api/: Cargo.toml  README.md  build.rs
crates/api/src/: app.rs  cli.rs  config.rs  error.rs  extractors.rs  lib.rs  main.rs  rate_limit.rs  render.rs  state.rs  static_assets.rs  telemetry.rs  wiki.rs
crates/api/src/admin/: blocklist.rs  config.rs  mod.rs  roles.rs  users.rs
crates/api/src/audit_log/: mod.rs  routes.rs
crates/api/src/auth/: csrf.rs  error.rs  extractors.rs  mod.rs  password.rs  routes.rs  session.rs  state.rs
crates/api/src/blocklist/: middleware.rs  mod.rs  peer_ip.rs  state.rs  url_check.rs
crates/api/src/captcha/: hcaptcha.rs  mod.rs  routes.rs
crates/api/src/categories/: dto.rs  mod.rs  routes.rs
crates/api/src/feeds/: mod.rs  routes.rs
crates/api/src/graphql/: auth.rs  context.rs  mod.rs  mutation.rs  query.rs  schema.rs  types.rs
crates/api/src/media/: dto.rs  mod.rs  routes.rs  storage.rs  thumbnail.rs
crates/api/src/namespaces/: dto.rs  mod.rs  routes.rs
crates/api/src/notifications/: dto.rs  mod.rs  routes.rs
crates/api/src/pages/: audit.rs  dto.rs  mod.rs  protect.rs  protection.rs  revert.rs  revisions.rs  routes.rs  signature.rs
crates/api/src/pending_revisions/: dto.rs  mod.rs  routes.rs
crates/api/src/rate_limit/: config.rs  error.rs  key.rs  middleware.rs  mod.rs
crates/api/src/rate_limit/store/: mod.rs  redis.rs
crates/api/src/recent_changes/: dto.rs  mod.rs  routes.rs
crates/api/src/search/: dto.rs  mod.rs  routes.rs
crates/api/src/watchlist/: dto.rs  mod.rs  routes.rs
crates/api/tests/: admin_config.rs  admin_roles.rs  admin_users.rs  approval_queue.rs  audit_log.rs  auth.rs  backlinks.rs  blocklist.rs  captcha.rs  categories_and_tags.rs  config.rs  configurable_auth.rs  graphql.rs  health.rs  media.rs  namespaces.rs  openapi.rs  page_protection.rs  pages.rs  rate_limit.rs  recent_changes.rs  revert.rs  revisions.rs  search.rs  static_assets.rs  talk_pages.rs  templates.rs  thumbnails.rs  watchlist_and_feeds.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: captcha.rs  category.rs  content_format.rs  id.rs  lib.rs  media.rs  namespace.rs  notification.rs  page.rs  pending_revision.rs  permissions.rs  protection.rs  render.rs  revision.rs  role.rs  session.rs  tag.rs  user.rs  validation.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: lib.rs  markdown.rs  sanitise.rs  slug.rs  template.rs
crates/render/tests/: markdown.rs  wikilinks.rs
crates/search/: Cargo.toml  README.md
crates/search/src/: error.rs  index.rs  indexer.rs  lib.rs  query.rs  results.rs  schema.rs  searcher.rs
crates/search/tests/: index.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: codec.rs  error.rs  lib.rs  repo.rs
crates/storage/src/libsql/: audit_log.rs  codec.rs  media.rs  mod.rs  namespace.rs  page.rs  page_audit.rs  recent_changes.rs  revision.rs  role.rs  session.rs  user.rs  watch.rs
crates/storage/src/postgres/: audit_log.rs  codec.rs  media.rs  mod.rs  namespace.rs  page.rs  recent_changes.rs  revision.rs  role.rs  session.rs  user.rs  watch.rs
crates/storage/src/sqlite/: audit_log.rs  category.rs  codec.rs  ip_blocklist.rs  media.rs  mod.rs  namespace.rs  notification.rs  page.rs  page_audit.rs  page_link.rs  pending_revision.rs  recent_changes.rs  revision.rs  role.rs  session.rs  tag.rs  url_blocklist.rs  user.rs  watch.rs
crates/storage/tests/: libsql_audit_log.rs  libsql_migrate.rs  libsql_namespaces.rs  libsql_pages.rs  libsql_revisions.rs  libsql_roles.rs  libsql_sessions.rs  libsql_users.rs  migrate.rs  postgres_audit_log.rs  postgres_migrate.rs  postgres_namespaces.rs  postgres_pages.rs  postgres_recent_changes.rs  postgres_revisions.rs  postgres_roles.rs  postgres_sessions.rs  postgres_users.rs  sqlite_audit_log.rs  sqlite_init.rs  sqlite_namespaces.rs  sqlite_page_links.rs  sqlite_pages.rs  sqlite_revisions.rs  sqlite_roles.rs  sqlite_sessions.rs  sqlite_talk_migration.rs  sqlite_users.rs
crates/storage/tests/common/: mod.rs
crates/storage/tests/common_libsql/: mod.rs
crates/storage/tests/common_pg/: mod.rs
docs/: ARCHITECTURE.md  openapi.json
docs/adr/: 0001-markdown-renderer.md  0002-template-syntax.md  README.md
migrations/: 00000000000000_init.sql  20260522005020_sessions.sql  20260522093000_audit_log.sql  20260522163629_page_links.sql  20260522170000_media.sql  20260523000000_media_variants.sql  20260523120000_categories_and_tags.sql  20260523130000_blocklists.sql  20260523140000_talk_namespaces.sql  20260523150000_watchlist.sql  20260523180000_pending_revisions.sql  README.md
migrations/postgres/: 00000000000000_init.sql  20260522005020_sessions.sql  20260522093000_audit_log.sql  20260522170000_media.sql  20260523000000_media_variants.sql  20260523120000_categories_and_tags.sql  20260523130000_blocklists.sql  20260523140000_talk_namespaces.sql  20260523150000_watchlist.sql  20260523180000_pending_revisions.sql
web/: .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts  styles.css
web/src/components/: Captcha.tsx  ConfirmDialog.tsx  Editor.tsx  InboxBell.tsx  SearchBox.tsx  TalkThread.tsx  WikiLinkAutocomplete.tsx
web/src/lib/: api.ts  auth.ts  captcha.ts  markdown.ts  search.ts
web/src/routes/: __root.tsx  admin.approval-queue.tsx  index.tsx  (+24 more)
xtask/: Cargo.toml  README.md
xtask/src/: audit_log_prune.rs  main.rs  migrate.rs
(+3 files in other folders)
