[workspace]
resolver = "3"
members = [
    "crates/api",
    "crates/core",
    "crates/render",
    "crates/search",
    "crates/storage",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "AGPL-3.0-only"
repository = "https://github.com/i-doll/thewiki"
authors = ["thewiki contributors"]

# Shared dependency versions are declared here. Crates opt in with
# `foo = { workspace = true }` in their own Cargo.toml. Keep this list
# minimal — real dependencies (sqlx, tantivy, …) land in follow-up
# issues as the corresponding crates are filled in.
[workspace.dependencies]
thewiki-core = { path = "crates/core" }
thewiki-render = { path = "crates/render" }
thewiki-search = { path = "crates/search" }
thewiki-storage = { path = "crates/storage" }

# Third-party crates used by workspace members. Only add entries here once a
# member actually consumes them — keep the surface small.

# Domain layer (#4).
bitflags = { version = "2.6", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
utoipa = { version = "5", features = ["time", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.11", features = ["v7", "serde"] }

# Render layer (#3).
ammonia = "4"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
pretty_assertions = "1"

# HTTP stack (#7).
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "trace",
    "request-id",
    "catch-panic",
    "compression-gzip",
    "set-header",
    "timeout",
] }

# Observability.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# CLI surface for the `thewiki` binary.
clap = { version = "4", features = ["derive", "env"] }

# Layered configuration loader (#8): built-in defaults < `thewiki.toml` < env.
figment = { version = "0.10", features = ["toml", "env"] }

# Binary-only error handling. Library crates use `thiserror`.
anyhow = "1"

# Serialising `Config` back to TOML for the `config print` debug aid (#8).
toml = "0.8"

# Test helpers (collecting axum response bodies in integration tests).
http-body-util = "0.1"

# Persistence layer (#5+). Database drivers are added per-adapter:
#   - M0 (this issue) layers `sqlite` on top.
#   - M1 (#24, #25) layers `postgres` and `libsql` on top of the same workspace
#     entry, with any dialect-specific SQL kept under `migrations/postgres/`.
# Keep the base feature set minimal so members that only need migration
# plumbing don't pull in a driver they don't use.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "migrate",
    "uuid",
    "time",
    "json",
    "sqlite",
] }

# Load `DATABASE_URL` (and friends) from a local `.env` for `xtask migrate run`
# during development. Production deploys use real env vars.
dotenvy = "0.15"

# Auth scaffold (#13). Argon2id for password hashing, tower-cookies for
# Set-Cookie machinery in handlers and the CSRF middleware. `password-hash`
# is the PHC string algorithm trait `argon2` builds on — pinning it here keeps
# the version compatible with the `argon2` we pick.
argon2 = "0.5"
# `getrandom` enables `OsRng` in `password-hash::rand_core` (needed for salt
# generation + the CSRF token); `alloc` brings in `String` support for PHC
# round-tripping.
password-hash = { version = "0.5", features = ["alloc", "getrandom"] }
tower-cookies = "0.11"
# Constant-time comparison (used for the CSRF token; `argon2` re-exports this
# internally on the verify path, but having an explicit dep makes the intent
# obvious in the auth crate's `Cargo.toml`).
subtle = "2"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
