[package]
name = "xtask"
description = "Repo-local automation tasks for thewiki. Not published."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
