[package]
name = "thewiki-api"
description = "thewiki HTTP API binary (Axum handlers, server entrypoint)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "thewiki"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Sibling crates.
thewiki-core = { workspace = true }
thewiki-render = { workspace = true }
thewiki-search = { workspace = true }
thewiki-storage = { workspace = true }
# Used directly by the auth login handler to read the opaque
# `users.password_hash` column (the user repository deliberately keeps that
# column off the domain model). When we add a dedicated credential repository
# (#35) this can move back behind the trait.
sqlx = { workspace = true }

# HTTP stack.
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }

# Auth (#13). Argon2id for password hashing, `password-hash` for the PHC
# string format used to store / verify hashes, `subtle` for constant-time
# comparison on the CSRF token path.
argon2 = { workspace = true }
password-hash = { workspace = true }
subtle = { workspace = true }
# Pulled in to expose the `Flags` trait so we can format `Permissions` as a
# pipe-separated string on the `/me` payload without re-implementing the
# iteration ourselves.
bitflags = { workspace = true }

# Observability.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI.
clap = { workspace = true }

# Configuration loading (defaults < TOML file < THEWIKI_* env). See `config.rs`.
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
time = { workspace = true }

# OpenAPI generation + axum integration + Swagger UI.
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Revision diff endpoint (#10) — unified diff text + structured hunks.
similar = { workspace = true }

# Binary error handling.
anyhow = { workspace = true }

# Request IDs.
uuid = { workspace = true }

# SPA asset embedding (#16). `rust-embed` bakes `web/dist/` into the release
# binary; `mime_guess` resolves the right `Content-Type` from the path
# extension. See `src/static_assets.rs` for the wiring.
rust-embed = { workspace = true }
mime_guess = { workspace = true }

# Media upload pipeline (#32). `object_store` abstracts S3 / R2 / MinIO behind
# a single trait; the DB-blob backend uses the storage crate's
# `MediaBlobRepository`. `sha2` hashes upload bytes for the content-address
# dedup; `bytes::Bytes` is the canonical buffer for blob payloads;
# `ammonia` scrubs SVG uploads (already pulled in transitively by the render
# crate but listed here for clarity since the media handler uses it directly).
object_store = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
ammonia = { workspace = true }
# `MediaBackend` is held behind `Arc<dyn …>` so the router doesn't have to
# parameterise over the backend choice. Rust 1.92 still doesn't make
# `async fn` in trait dyn-compatible without help, so `async_trait` is the
# pragmatic choice for this one trait.
async-trait = { workspace = true }
# Image processing for the thumbnail pipeline (#33). Decoding the upload,
# resizing it via Lanczos3, and re-encoding to WebP all live in
# `crates/api/src/media/thumbnail.rs`. Re-encoding strips EXIF as a side
# effect (the `image` encoders never carry the EXIF block through), which
# is the privacy property the issue calls for.
image = { workspace = true }
# Used by the S3 backend's `delete_variants` path to walk the bucket
# `media/<id>/` prefix. `axum` already pulls `futures-util` in
# transitively, but declaring the dep keeps the import obvious.
futures-util = "0.3"
# Rate limiting (#35). `dashmap` is the sharded concurrent map under the
# in-memory backend; `async-trait` lets the pluggable store trait stay async
# without leaking the future type. The `redis` crate is optional — it ships
# behind the `redis` cargo feature so default builds don't pull it in.
dashmap = { workspace = true }
redis = { workspace = true, optional = true }

[features]
default = []
# Enable the Redis-backed rate-limit store. See
# `src/rate_limit/store/redis.rs` for the Lua-script bucket contract.
redis = ["dep:redis"]

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
roxmltree = { workspace = true }
# `test` feature pulls in `figment::Jail`, which gives integration tests a
# sandboxed env + cwd for layered-loader assertions (#8).
figment = { workspace = true, features = ["test"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
# Used by the thumbnail integration tests to parse EXIF out of the served
# variant bytes and assert the encoder dropped it. Never reached at
# runtime.
kamadak-exif = { workspace = true }
# Used in the animated-GIF test to encode a tiny 2-frame GIF without
# pulling in a heavier image-construction crate. `image` itself depends
# on `gif` so the lockfile already carries it.
gif = "0.14"

[lints]
workspace = true
