[package]
name = "thewiki-core"
description = "Core domain models, traits, and shared types for thewiki."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
