[package]
name = "thewiki-core"
description = "Core domain models, traits, and shared types for thewiki."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bitflags = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
