[package]
name = "thewiki-render"
description = "Renderer trait and Markdown implementation for thewiki."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thewiki-core = { workspace = true }

[lints]
workspace = true
