[package]
name = "thewiki-search"
description = "Search index wrapper around Tantivy for thewiki."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thewiki-core = { workspace = true }

[lints]
workspace = true
