[package]
name = "thewiki-storage"
description = "Storage abstractions for thewiki (sqlx + object_store)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# M0 ships SQLite. M1 will add `postgres` and `libsql` here so the API crate
# can pick a backend at compile time without dragging the full driver matrix
# into every build.
default = ["sqlite"]
sqlite = []

[dependencies]
thewiki-core = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
