[package]
name = "thewiki-storage"
description = "Storage abstractions for thewiki (sqlx + object_store)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# M0 ships SQLite. M1 adds `libsql` (#24) and `postgres` (#25), gated by their
# own features so the API crate picks one backend at compile time.
#
# Why `sqlx` is gated behind `sqlite` (and `postgres`): both `sqlx-sqlite`
# and `libsql` bundle their own statically-linked SQLite engine
# (`libsqlite3-sys` vs `libsql-ffi`). Pulled in together they fail to link
# with duplicate `sqlite3_*` symbols. Selecting the backend at compile time
# is the standard answer.
default = ["sqlite"]
sqlite = ["dep:sqlx"]
libsql = ["dep:libsql"]
postgres = ["dep:sqlx", "sqlx/postgres"]

[dependencies]
thewiki-core = { workspace = true }
sqlx = { workspace = true, optional = true }
# Used at startup by the sqlite adapter to pre-create the database's parent
# directory; the rest of the storage layer stays synchronous and lets the
# driver own its own runtime.
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
libsql = { workspace = true, optional = true }
# Used in the `MediaBlobRepository` trait surface so the API layer can move
# blob payloads through the storage adapters without copying.
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
